# nonebot-plugin-simple-setu

./: README.md  pyproject.toml
nonebot-plugin-simple-setu/: __init__.py  example.json
nonebot_plugin_simple_setu/: __init__.py  config.py  example_jitsu.json
